test/flowanalysis/recursion/rec_fun-1.good
rec_fun-1.chpl:2: error: Unable to resolve return type of function 'f'
rec_fun-1.chpl:2: In function 'f':
rec_fun-1.chpl:5: error: Called recursively at this point
